# ragtrace

./: .gitignore  CHANGELOG.md  DAY7_COMPLETE.md  DAY7_STATUS.md  GITHUB_PUSH_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  PUSH_INSTRUCTIONS.txt  README.md  RENAME_SUMMARY.md  ROADMAP_v0.2.0.md  STATUS.md  TIMELINE_FIX_COMPLETE.md  UI_FIX_PORT_MISMATCH.md  push-to-github.sh  pyproject.toml  quick_test.py  setup.py  start.sh  test_app.py  test_package.sh  verify.py
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
api/: __init__.py  main.py  routes.py
cli/: __init__.py  main.py
core/: __init__.py  capture.py  cost.py  models.py  regression.py  storage.py
demo/: make_demo_gif.py  record_demo.sh
docs/milestones/: DAY6_COMPLETE.md  DAY6_TESTING_SUMMARY.md  DAY7_MANUAL_TESTING.md  DAY7_PLAN.md  DAY7_RESUME_STATUS.md  DAY7_TESTING.md  TESTING_COMPLETE.md  TEST_SUMMARY.md  UI_FIX_SUMMARY.md  UI_SECTIONS_STATUS.md  WORK_COMPLETE.md
examples/: saas_integration_future.py  simple_rag.py
langchain/: __init__.py  middleware.py
llamaindex/: __init__.py  middleware.py
tests/: test_capture.py  test_cost.py  test_llamaindex.py  test_prompt_versioning.py  test_regression.py  test_storage.py
ui/: IMPLEMENTATION_SUMMARY.md  README.md  app.js  generate_test_data_v2.py  index.html  serve.py  styles.css  test-api.html  timeline-test.html
