[tool.poetry]
name = "ragtrace"
version = "0.2.0"
description = "Observability and tracing for Retrieval-Augmented Generation pipelines"
authors = ["Sabyasachi Ghosh"]
readme = "README.md"
packages = [{include = "core"}, {include = "langchain"}, {include = "api"}, {include = "cli"}, {include = "ui"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
click = "^8.1.0"
tiktoken = "^0.5.0"
langchain = "^0.1.0"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.5"
openai = "^1.0.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.0.0"
ruff = "^0.1.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
ragtrace = "cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
